# fastapi-gemini-api

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
src/: main.py
src/agents/: rag_agent.py
src/dependencies/: agents.py  services.py
src/models/: generate_content.py
src/routers/: _root.py  agents.py  file_search_store.py  root.py  test.py
src/services/: file_search_store_service.py  gemini_service.py  gen_ai_service.py
