[project]
name = "fastapi-gemini-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Samuel Hellstrøm",email = "samuel.hellstrom@netlight.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.121.2,<0.122.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "google (>=3.0.0,<4.0.0)",
    "google-genai (>=1.51.0,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
]

[tool.poetry]
packages = [{include = "fastapi_gemini_api", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
